--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.7.0",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "15.3.1",
