--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "15.3.1",
