--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "15.3.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
