--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^1.0.1",
     "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
@@ -29,7 +30,8 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "schema-dts": "^1.1.5"
+    "schema-dts": "^1.1.5",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
